# locus-quarter

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config-locus-quarter.ini  config-mini-locus-quarter.ini  example-config-locus-quarter.ini  locus_quarter.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  nightly-mutation.yml
scripts/: check_coverage_gates.py  check_mutation_score.py
src/locus_quarter_app/: __init__.py  adapters.py  cli.py  config.py  emailer.py  interfaces.py  models.py  reporting.py  schedule.py  service.py
test/: __init__.py  config-test-locus-quarter.ini  conftest.py  fakes.py  test_adapters.py  test_cli.py  test_cli_errors.py  test_config.py  test_contract_payloads.py  test_e2e_smoke.py  test_emailer.py  test_geocode.py  test_integration_pipeline.py  test_mutation_smoke.py  test_property_config.py  test_reporting_models.py  test_schedule.py  test_security_basics.py  test_service_edge_branches.py  test_service_unit.py  test_snapshot_report.py
test/fixtures/: distance_matrix_missing_fields.json  distance_matrix_valid.json
test/snapshots/: report_output.txt
